Sector Nord AG: Fixed popup description long were cut off in Customer Interface. (#331)

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Form.css
@@ -211,7 +211,6 @@ fieldset h2 + p.Description {
 fieldset h2 + div {
     padding-top: 13px;
     border-top: 1px solid #FFF;
-    overflow: hidden;
 }
 
 fieldset p {
